<resources>
    <string name="m_camera_determine">确定</string>
    <string name="m_camera_common_cancel">取消</string>
    <string name="m_camera_common_select">请选择</string>
    <string name="m_camera_common_title_file">文件</string>

    <string name="m_camera_common_photo">图片</string>
    <string name="m_camera_common_video">视频</string>
    <string name="m_camera_common_file">文档</string>
    <string name="m_camera_common_sound">音频</string>

    <string name="m_camera_image_title">照片</string>
    <string name="m_camera_scenes_select_title">场景</string>
    <string name="m_camera_scenes_select">请选择场景</string>
    <string name="m_camera_scenes_label_title">标签</string>
    <string name="m_camera_label_select">请选择标签</string>
    <string name="m_camera_latitude_longitude_title">经纬度</string>
    <string name="m_camera_longitude">经度</string>
    <string name="m_camera_latitude">纬度</string>
    <string name="m_camera_longitude_radius">经度半径</string>
    <string name="m_camera_remarks_title">备注</string>
    <string name="m_camera_prompt_text">描述文件详情</string>
    <string name="m_camera_button_save_text">保存</string>

    <string name="m_camera_image_title_photo">照片</string>
    <string name="m_camera_image_title_video">视频</string>
    <string name="m_camera_image_content_type_photo">图片提交</string>
    <string name="m_camera_image_content_type_video">视频提交</string>

    <string name="m_camera_text_recent">最近</string>

    <string name="m_camera_text_filter_sort">筛选</string>
    <string name="m_camera_text_report_sort">未上传</string>
    <string name="m_camera_text_time_sort">时间</string>
    <string name="m_camera_text_size_sort">大小</string>
    <string name="m_camera_text_over">完成</string>
</resources>