<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/m_camera_submit_tag_background">

    <View
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/m_camera_submit_tag_background"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/m_camera_title_background"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_title_background"
        app:layout_constraintBottom_toBottomOf="@id/m_camera_title_background"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dimen_15_dp"
        android:background="@drawable/ic_chevron_left_white_48dp"
        android:id="@+id/m_camera_TextView_title_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_title_background"
        app:layout_constraintBottom_toBottomOf="@id/m_camera_title_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/m_camera_TextView_title"
        android:text="图片提交" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_title_background"
        app:layout_constraintBottom_toBottomOf="@id/m_camera_title_background"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dimen_15_dp"
        android:text="@string/m_camera_determine" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:id="@+id/m_camera_TextView_item_content_type"
        android:text="@string/m_camera_image_title"
        app:layout_constraintTop_toBottomOf="@id/m_camera_title_background"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20_dp"
        android:background="@color/m_camera_submit_item_background"
        android:textColor="@color/m_camera_submit_item_text"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_item_content_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/m_camera_TextView_item_scenes_title"
        android:id="@+id/m_camera_ImageView_icon"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginLeft="@dimen/dimen_20_dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:id="@+id/m_camera_TextView_item_scenes_title"
        android:text="@string/m_camera_scenes_label_title"
        android:layout_marginTop="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_ImageView_icon"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20_dp"
        android:background="@color/m_camera_submit_item_background"
        android:textColor="@color/m_camera_submit_item_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_item_scenes_title"
        android:text="@string/m_camera_scenes_select"
        android:textSize="@dimen/m_camera_item_title_size"
        android:drawableRight="@drawable/ic_chevron_left_white_48dp"
        android:paddingLeft="@dimen/dimen_20_dp"
        android:paddingRight="@dimen/dimen_20_dp"
        android:gravity="center_vertical"
        android:id="@+id/m_camera_TextView_scenes_select"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:id="@+id/m_camera_TextView_item_latitude_longitude"
        android:text="@string/m_camera_latitude_longitude_title"
        android:layout_marginTop="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_scenes_select"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20_dp"
        android:background="@color/m_camera_submit_item_background"
        android:textColor="@color/m_camera_submit_item_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        app:layout_constraintTop_toBottomOf="@+id/m_camera_TextView_item_latitude_longitude"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:text="@string/m_camera_longitude"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        android:id="@+id/m_camera_textView_longitude"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:id="@+id/m_camera_TextView_latitude"
        android:text="@string/m_camera_latitude"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_textView_longitude" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30_dp"
        android:id="@+id/m_camera_TextView_latitude_longitude_radius"
        android:text="@string/m_camera_longitude_radius"
        android:layout_marginLeft="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_latitude" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        android:id="@+id/m_camera_TextView_item_remarks"
        android:text="@string/m_camera_remarks_title"
        android:layout_marginTop="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_latitude_longitude_radius"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/dimen_20_dp"
        android:background="@color/m_camera_submit_item_background"
        android:textColor="@color/m_camera_submit_item_text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_120_dp"
        app:layout_constraintTop_toBottomOf="@+id/m_camera_TextView_item_remarks"/>





</androidx.constraintlayout.widget.ConstraintLayout>