<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_dialog_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/m_camera_common_cancel"
        android:textSize="20sp"
        android:textColor="@color/m_camera_submit_item_text"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:layout_marginLeft="@dimen/dimen_15_dp"
        android:id="@+id/m_camera_TextView_cancel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_cancel"
        app:layout_constraintLeft_toRightOf="@id/m_camera_TextView_cancel"
        app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_determine"
        android:text="@string/m_camera_common_select"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/m_camera_common_text"
        android:id="@+id/m_camera_TextView_select_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_cancel"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/m_camera_TextView_determine"
        android:text="@string/m_camera_determine"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/submit_button_background_color"
        android:layout_marginRight="@dimen/dimen_15_dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintTop_toTopOf="@+id/m_camera_NumberPicker_scenes_select"
        android:background="@color/m_camera_divider_color" />

    <com.zsf.m_camera.ui.view.CustomNumberPicker
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/dimen_40_dp"
        android:id="@+id/m_camera_NumberPicker_scenes_select"/>

</androidx.constraintlayout.widget.ConstraintLayout>