<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/m_camera_theme_background">


    <TextView
        android:id="@+id/status_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_camera_status_bar_size"
        android:background="@color/m_camera_theme_background"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40_dp"
        app:layout_constraintTop_toBottomOf="@id/status_bar"
        android:text="@string/m_camera_common_title_file"
        android:textColor="@color/m_camera_text_color_000000"
        android:gravity="center"
        android:textSize="@dimen/m_camera_text_size_18"
        android:id="@+id/m_camera_TextView_title"
        android:layout_marginBottom="@dimen/dimen_15_dp"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_title" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_video"
        android:text="@string/m_camera_common_photo"
        android:textColor="@color/m_camera_common_text_color"
        android:textSize="@dimen/m_camera_text_size_14"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:drawableTop="@drawable/first_page_photo"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:gravity="center"
        android:id="@+id/m_camera_TextView_photo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_photo"
        app:layout_constraintLeft_toRightOf="@id/m_camera_TextView_photo"
        app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_file"
        android:text="@string/m_camera_common_video"
        android:textColor="@color/m_camera_common_text_color"
        android:textSize="@dimen/m_camera_text_size_14"
        android:drawableTop="@drawable/first_page_video"
        android:gravity="center"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:id="@+id/m_camera_TextView_video"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_photo"
        app:layout_constraintLeft_toRightOf="@+id/m_camera_TextView_video"
        app:layout_constraintRight_toLeftOf="@+id/m_camera_TextView_sound"
        android:text="@string/m_camera_common_file"
        android:textColor="@color/m_camera_common_text_color"
        android:textSize="@dimen/m_camera_text_size_14"
        android:drawableTop="@drawable/first_page_file"
        android:gravity="center"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:id="@+id/m_camera_TextView_file"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/m_camera_TextView_photo"
        app:layout_constraintLeft_toRightOf="@+id/m_camera_TextView_file"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/m_camera_common_sound"
        android:textColor="@color/m_camera_common_text_color"
        android:textSize="@dimen/m_camera_text_size_14"
        android:drawableTop="@drawable/first_page_sound"
        android:gravity="center"
        android:drawablePadding="@dimen/dimen_10_dp"
        android:id="@+id/m_camera_TextView_sound"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_TextView_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/m_camera_theme_flip_color"
        android:layout_marginTop="@dimen/dimen_30_dp"
        android:id="@+id/m_camera_View_background"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/m_camera_theme_background"
        app:layout_constraintTop_toTopOf="@id/m_camera_View_background"
        app:layout_constraintBottom_toTopOf="@id/m_camera_View_bottom_navigation"
        android:layout_margin="@dimen/dimen_10_dp"
        android:id="@+id/m_camera_View_flip_background"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/little_blue"
        app:layout_constraintLeft_toLeftOf="@id/m_camera_View_flip_background"
        app:layout_constraintTop_toTopOf="@id/m_camera_View_flip_background"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:id="@+id/little_blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_camera_text_recent"
        android:textColor="@color/m_camera_text_color_333333"
        android:textSize="@dimen/m_camera_text_size_18"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/little_blue"
        app:layout_constraintBottom_toBottomOf="@id/little_blue"
        app:layout_constraintLeft_toLeftOf="@id/little_blue"
        android:layout_marginLeft="@dimen/dimen_15_dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/little_blue"
        app:layout_constraintBottom_toBottomOf="@id/little_blue"
        app:layout_constraintRight_toRightOf="@id/m_camera_View_flip_background"
        android:src="@drawable/refresh"
        android:layout_marginRight="@dimen/dimen_15_dp"
        android:id="@+id/m_camera_ImageView_refresh"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/m_camera_ImageView_refresh"
        app:layout_constraintBottom_toBottomOf="@id/m_camera_View_flip_background"
        app:layout_constraintLeft_toLeftOf="@+id/m_camera_View_flip_background"
        app:layout_constraintRight_toRightOf="@+id/m_camera_View_flip_background"
        android:layout_margin="@dimen/dimen_20_dp"
        android:id="@+id/m_camera_RecyclerView_recent_list"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_camera_bottom_navigation_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/m_camera_theme_background"
        android:id="@+id/m_camera_View_bottom_navigation"/>

    <ImageView
        android:layout_width="@dimen/m_camera_bottom_navigation_float_height"
        android:layout_height="@dimen/m_camera_bottom_navigation_float_height"
        app:layout_constraintBottom_toBottomOf="@id/m_camera_View_bottom_navigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/bottom_navigation"
        android:layout_marginBottom="@dimen/m_camera_bottom_navigation_margin"
        android:id="@+id/m_camera_ImageView_open_mask"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/m_camera_ConstraintLayout_mask"
        android:background="#D9000000"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_do_photo"
            android:drawableTop="@drawable/first_page_video"
            android:text="@string/m_camera_common_video"
            android:textColor="@color/m_camera_mask_text"
            android:drawablePadding="@dimen/dimen_10_dp"
            android:layout_marginBottom="@dimen/dimen_120_dp"
            android:gravity="center"
            android:id="@+id/m_camera_TextView_do_video"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/m_camera_TextView_do_video"
            app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_do_file"
            android:drawableTop="@drawable/first_page_photo"
            android:text="@string/m_camera_common_photo"
            android:textColor="@color/m_camera_mask_text"
            android:drawablePadding="@dimen/dimen_10_dp"
            android:gravity="center"
            android:id="@+id/m_camera_TextView_do_photo"
            android:layout_marginBottom="@dimen/dimen_200_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/m_camera_TextView_do_photo"
            app:layout_constraintRight_toLeftOf="@id/m_camera_TextView_do_sound"
            android:drawableTop="@drawable/first_page_file"
            android:text="@string/m_camera_common_file"
            android:textColor="@color/m_camera_mask_text"
            android:drawablePadding="@dimen/dimen_10_dp"
            android:gravity="center"
            android:id="@+id/m_camera_TextView_do_file"
            android:layout_marginBottom="@dimen/dimen_200_dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/m_camera_TextView_do_file"
            app:layout_constraintRight_toRightOf="parent"
            android:drawableTop="@drawable/first_page_sound"
            android:text="@string/m_camera_common_sound"
            android:textColor="@color/m_camera_mask_text"
            android:drawablePadding="@dimen/dimen_10_dp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dimen_120_dp"
            android:id="@+id/m_camera_TextView_do_sound"/>

        <ImageView
            android:layout_width="@dimen/dimen_60_dp"
            android:layout_height="@dimen/dimen_60_dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/bottom_navigation"
            android:layout_marginBottom="@dimen/dimen_60_dp"
            android:id="@+id/m_camera_ImageView_close_mask"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>